src/test/ui/attributes/issue-90873.stderr
error: unexpected token: `||
           {
               static d: _ = || 1;
           }`
  --> $DIR/issue-90873.rs:1:6
   |
LL | #![u=||{static d=||1;}]
   |      ^^^^^^^^^^^^^^^^^

error: unexpected token: `{
           impl std::ops::Neg for i8 { }
       }`
  --> $DIR/issue-90873.rs:7:6
   |
LL | #![a={impl std::ops::Neg for i8 {}}]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `u` in this scope
  --> $DIR/issue-90873.rs:1:4
   |
LL | #![u=||{static d=||1;}]
   |    ^

error: cannot find attribute `a` in this scope
  --> $DIR/issue-90873.rs:7:4
   |
LL | #![a={impl std::ops::Neg for i8 {}}]
   |    ^

error[E0601]: `main` function not found in crate `issue_90873`
  --> $DIR/issue-90873.rs:1:1
   |
LL | / #![u=||{static d=||1;}]
LL | |
LL | |
LL | |
LL | |
LL | |
LL | | #![a={impl std::ops::Neg for i8 {}}]
   | |____________________________________^ consider adding a `main` function to `$DIR/issue-90873.rs`

error: missing type for `static` item
  --> $DIR/issue-90873.rs:1:16
   |
LL | #![u=||{static d=||1;}]
   |                ^ help: provide a type for the item: `d: <type>`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0601`.
